option('opengl',
	type: 'combo',
	choices: ['angle', 'core', 'compat'],
	value: 'angle',
	description: 'OpenGL API target')
option('angle_static',
    type: 'boolean',
	value: false,
	description: 'Link ANGLE statically')
option('wayland',
    type: 'boolean',
    value: false,
    description: 'Enable Wayland support')
