option('opengl', type: 'combo', choices: ['angle', 'core', 'compat'], value: 'angle', description: 'OpenGL API target')
option('wayland', type: 'feature', value: 'disabled', description: 'Enable Wayland support')
option('vivante', type: 'feature', value: 'disabled', description: 'Enable Vivante support')
option('dummyAudio', type: 'feature', value: 'disabled', description: 'Enable dummy audio')
option('diskAudio', type: 'feature', value: 'enabled', description: 'Enable disk audio')
option('virtualJoystick', type: 'feature', value: 'disabled', description: 'Enable virtual joystick')
option('dummyVideo', type: 'feature', value: 'disabled', description: 'Enable dummy video')
option('avx', type: 'feature', value: 'disabled', description: 'Enable avx support')
option('avx2', type: 'feature', value: 'disabled', description: 'Enable avx2 support')
option('avx512f', type: 'feature', value: 'disabled', description: 'Enable avx512f support')